--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -1,10 +1,9 @@
 name: client
 
-# 1. Source: 특정 브랜치에 코드가 커밋되면
 on:
   push:
     branches:
-      - reference #브랜치명
+      - reference 
 jobs:
   build:
     runs-on: ubuntu-20.04
@@ -12,15 +11,15 @@ jobs:
       - name: Checkout source code.
         uses: actions/checkout@v2
       - name: Install dependencies
-        run: npm install # npm 인스톨하기
+        run: npm install 
         working-directory: ./my-agora-states-client 
         
-# 2. Webpack을 이용해 빌드를 진행하고        
+       
       - name: Build
-        run: npm run build # npm 빌드 만들기
+        run: npm run build 
         working-directory: ./my-agora-states-client
         
-# 3. Deploy: s3로 빌드 결과를 업로드한다.        
+       
       - name: SHOW AWS CLI VERSION
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -38,4 +37,4 @@ jobs:
             --region ap-northeast-2 \
             build s3://my-app-client-bucket \
             --delete
-        working-directory: ./my-agora-states-client # 경로지정
+        working-directory: ./my-agora-states-client
