--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -1,39 +1,38 @@
 name: client
 
-on:
+on: 
   push:
     branches:
-      - reference 
+      - reference
+
 jobs:
-  build:
-    runs-on: ubuntu-20.04
+  test:
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout source code.
         uses: actions/checkout@v2
       - name: Install dependencies
-        run: npm install 
-        working-directory: ./my-agora-states-client 
-        
-       
-      - name: Build
-        run: npm run build 
+        run: npm install
         working-directory: ./my-agora-states-client
-        
-       
+      
+      - name: Build
+        run: npm run build
+        working-directory: ./my-agora-states-client
+
       - name: SHOW AWS CLI VERSION
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_EC2_METADATA_DISABLED: true
         run: |
-          aws --version 
+          aws --version
       - name: Sync Bucket
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_EC2_METADATA_DISABLED: true
         run: |
-          aws s3 sync \ 
+          aws s3 sync \
             --region ap-northeast-2 \
             build s3://my-app-client-bucket \
             --delete
